# ansible-admin

./: .gitignore  README.md  pyproject.toml  template.env  template.sensitive_vars.yml
.github/workflows/: ansible-lint.yml
ansible_admin/: __init__.py  ansible.cfg  constants.py
ansible_admin/playbooks/: README.md  README_create_repo_user.md  README_github_clone.md  create_debian_service.yml  create_repo_user.yml  cuda_toolkit.yml  cuda_verify.yml  debian_hosts.yml  debian_upgrades.yml  dns_server_primary.yml  docker_install.yml  gather_hardware_info.yml  github_clone.yml  gitlab_runner_install.yml  localhost_upgrades.yml  nodejs_install.yml  nvidia_container.yml  python_install.yml  security_updates.yml  set_local_timezone.yml  speedtest.yml  task_install.yml  ubuntu_upgrades.yml
ansible_admin/roles/create_debian_service/templates/: service.j2
ansible_admin/roles/create_repo_user/tasks/: main.yml
ansible_admin/roles/create_repo_user/templates/: config.j2
ansible_admin/roles/create_repo_user/vars/: defaults.yml
ansible_admin/roles/cuda_toolkit/vars/: main.yml
ansible_admin/roles/cuda_verify/tasks/: main.yml
ansible_admin/roles/debian_upgrades/tasks/: main.yml
ansible_admin/roles/dns_server_primary/tasks/: main.yml
ansible_admin/roles/dns_server_primary/templates/: named.conf.local.j2  named.conf.options.j2
ansible_admin/setup/: __init__.py  ip_scanner.py  packages.sh
ansible_admin/templates/: github_vars_template.yml  sensitive_vars_template.yml  service_vars_template.yml
requirements/: requirements-dev.txt  requirements.txt
(+44 files in other folders)
